--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,37 @@ img {
 ul {
     list-style: none;
 }
+
+body {
+    background: #FAF6ED;
+    color: #222222;
+    -webkit-font-smoothing: antialiased;
+    display: grid;
+    grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
+}
+
+body .menu {
+    grid-column: 3 / 5;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background: #FB5;
+}
+
+body .menu ul {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+}
+
+body .menu li a {
+    display: block;
+    padding: 10px;
+    margin-right: 10px;
+    color: #222222;
+    text-decoration: none;
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.875rem;
+    letter-spacing: 0.1em;
+}
