--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,14 @@ body .menu li a {
     font-size: 0.875rem;
     letter-spacing: 0.1em;
 }
+
+body .grid-section {
+    grid-column: 2 / 4;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 90px 300px 1fr;
+    grid-gap: 20px;
+    margin-bottom: 4rem;
+}
