feat: stylized the content of animals. changed grid-column, fonts, margin, colors, background

--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,64 @@ body .grid-section {
     grid-gap: 20px;
     margin-bottom: 4rem;
 }
+
+body .grid-section.animals .title {
+    font-family: 'Playfair Display SC', georgia;
+    font-size: 6rem;
+    line-height: 1;
+    font-weight: 400;
+    margin-bottom: 1rem;
+    grid-column: 1 / 4;
+}
+
+body .grid-section.animals section h2 {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    margin-bottom: 1rem;
+    color: #E54;
+}
+
+body .grid-section.animals section h2::before {
+    content: '';
+    display: inline-block;
+    width: 40px;
+    height: 10px;
+    margin-right: 10px;
+    background: #FB5;
+}
+
+body .grid-section.animals section p {
+    font-family: Helvetica, Arial;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+}
+
+body .grid-section.animals .animals-list {
+    height: 370px;
+    overflow-y: scroll;
+    grid-column: 2;
+}
+
+body .grid-section.animals .animals-list::-webkit-scrollbar {
+    width: 18px;
+}
+
+body .grid-section.animals .animals-list::-webkit-scrollbar-thumb {
+    background: #FB5;
+    border-left: 4px solid #FAF6ED;
+    border-right: 4px solid #FAF6ED;
+}
+
+body .grid-section.animals .animals-list::-webkit-scrollbar-track {
+    background: #FAF6ED;
+}
+
+body .grid-section.animals .animals-description {
+    grid-column: 3;
+}
+
+body .grid-section.animals .animals-description section {
+    margin-bottom: 3rem;
+}
