--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,25 @@ body .grid-section.faq .faq-list dd {
     margin-bottom: .5rem;
     margin-left: 30px;
 }
+
+body .grid-section.contact .map {
+    grid-column: 2;
+}
+
+body .grid-section.contact .data {
+    grid-column: 3;
+}
+
+body .grid-section.contact .data li {
+    margin-bottom: 1rem;
+    font-family: Helvetica, Arial;
+}
+
+body .grid-section.contact .data li::before {
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 10px;
+    margin-right: 20px;
+    background: #FB5;
+}
