--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-body, h1, h2, h3, ul, li, p, dd, dt, dl {
+body, h1, h2, ul, 
+li, p, dd, dt, dl {
     padding: 0px;
     margin: 0px;
 }
@@ -42,8 +43,8 @@ body .menu li a {
     font-family: 'IBM Plex Mono', monospace;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 0.875rem;
-    letter-spacing: 0.1em;
+    font-size: .875rem;
+    letter-spacing: .1em;
 }
 
 body .grid-section {
@@ -53,7 +54,7 @@ body .grid-section {
     padding: 10px;
     display: grid;
     grid-template-columns: 90px 300px 1fr;
-    grid-gap: 20px;
+    gap: 20px;
     margin-bottom: 4rem;
 }
 
@@ -165,7 +166,7 @@ body .grid-section.contact .data li::before {
     display: inline-block;
     width: 20px;
     height: 10px;
-    margin-right: 20px;
+    margin-right: 10px;
     background: #FB5;
 }
 
@@ -179,4 +180,45 @@ body .copy p {
     padding: 20px;
     font-family: 'IBM Plex Mono', monospace;
     font-weight: bold;
+}
+
+@media (max-width: 700px) {
+    body {
+        grid-template-columns: 1fr;
+    }
+
+    body .menu {
+        margin-top: 0px;
+    }
+
+    body .menu, 
+    body .grid-section, 
+    body .copy {
+        grid-column: 1;
+    }
+
+    body .grid-section {
+        grid-template-columns: 100px 1fr;
+        grid-gap: 10px;
+    }
+    
+    body .grid-section.animals .title, 
+    body .grid-section.faq .title, 
+    body .grid-section.contact .title {
+        font-size: 3rem;
+    }
+
+    body .grid-section.animals .animals-list {
+        grid-column: 1;
+    }
+
+    body .grid-section.faq .faq-list, 
+    body .grid-section.contact .map, 
+    body .grid-section.contact .data {
+        grid-column: 1 / 3;
+    }
+
+    body .copy {
+        margin-bottom: 0px;
+    }
 }
