--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body .menu ul {
 
 body .menu li a {
     display: block;
-    padding: 10px;
+    padding: 15px 10px;
     margin-right: 10px;
     color: #222222;
     text-decoration: none;
@@ -111,6 +111,10 @@ body .grid-section.animals .animals-list::-webkit-scrollbar-thumb {
 
 body .grid-section.animals .animals-list::-webkit-scrollbar-track {
     background: #FAF6ED;
+}
+
+body .grid-section.animals .animals-list li {
+    cursor: pointer;
 }
 
 body .grid-section.animals .animals-description {
@@ -220,5 +224,26 @@ body .copy p {
 
     body .copy {
         margin-bottom: 0px;
+    }
+}
+
+.js body .grid-section.animals .animals-description.js-tabcontent section {
+    display: none;
+}
+
+body .grid-section.animals .animals-description.js-tabcontent section.active {
+    display: block !important;
+    animation: show .5s forwards;
+}
+
+@keyframes show {
+    from {
+        opacity: 0;
+        transform: translate3d(-30px, 0px, 0px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate3d(0px, 0px, 0px);
     }
 }
