feat: added a ::after to the html semantic area of opening hours and stylized to show a red circle if it is closed and a green circle if it is opened

--- a/css/global.css
+++ b/css/global.css
@@ -315,3 +315,18 @@ body .grid-section.animals .animals-description[data-tab="content"] section.acti
     opacity: 1;
     transform: translate3d(0px, 0px, 0px);
 }
+
+[data-week]::after {
+    display: inline-block;
+    content: '';
+    width: 6px;
+    height: 6px;
+    background: #E54;
+    border-radius: 50%;
+    margin-left: 4px;
+    border: 2px solid #000;
+}
+
+[data-week].open::after {
+    background: #3F4;
+}
